force-app/main/default/objects/Beneficiaries__c/Beneficiaries__c.object-meta.xml
<CustomObject>
    <label>Beneficiaries</label>
    <nameField>
        <displayFormat>BENE-{0000}</displayFormat>
        <label>Beneficiaries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>