force-app/main/default/objects/Beneficiaries__c/fields/ActualBoys__c.field-meta.xml
<CustomField>
    <fullName>ActualBoys__c</fullName>
    <label>Actual-Boys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>