force-app/main/default/objects/Beneficiaries__c/fields/ActualGirls__c.field-meta.xml
<CustomField>
    <fullName>ActualGirls__c</fullName>
    <label>Actual-Girls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>