force-app/main/default/objects/Beneficiaries__c/fields/ActualHouseholds__c.field-meta.xml
<CustomField>
    <fullName>ActualHouseholds__c</fullName>
    <label>Actual-Households</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>