force-app/main/default/objects/Beneficiaries__c/fields/ActualIndividuals__c.field-meta.xml
<CustomField>
    <fullName>ActualIndividuals__c</fullName>
    <label>Actual-Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>