force-app/main/default/objects/Beneficiaries__c/fields/ActualMen__c.field-meta.xml
<CustomField>
    <fullName>ActualMen__c</fullName>
    <label>Actual-Men</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>