force-app/main/default/objects/Beneficiaries__c/fields/ActualWomen__c.field-meta.xml
<CustomField>
    <fullName>ActualWomen__c</fullName>
    <label>Actual-Women</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>