force-app/main/default/objects/Beneficiaries__c/fields/Concept_Note__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note__c</fullName>
    <label>Concept Note</label>
    <referenceTo>Concept_Note__c</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>