force-app/main/default/objects/Beneficiaries__c/fields/Planned_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Planned_Beneficiaries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planned Beneficiaries</label>
    <referenceTo>Beneficiaries__c</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <type>Lookup</type>
</CustomField>