force-app/main/default/objects/Beneficiaries__c/fields/PlannedBoys__c.field-meta.xml
<CustomField>
    <fullName>PlannedBoys__c</fullName>
    <label>Planned-Boys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>