force-app/main/default/objects/Beneficiaries__c/fields/PlannedGirls__c.field-meta.xml
<CustomField>
    <fullName>PlannedGirls__c</fullName>
    <label>Planned-Girls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>