force-app/main/default/objects/Beneficiaries__c/fields/PlannedHouseholds__c.field-meta.xml
<CustomField>
    <fullName>PlannedHouseholds__c</fullName>
    <label>Planned-Households</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>