force-app/main/default/objects/Beneficiaries__c/fields/PlannedIndividuals__c.field-meta.xml
<CustomField>
    <fullName>PlannedIndividuals__c</fullName>
    <label>Planned-Individuals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>