force-app/main/default/objects/Beneficiaries__c/fields/PlannedMen__c.field-meta.xml
<CustomField>
    <fullName>PlannedMen__c</fullName>
    <label>Planned-Men</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>