force-app/main/default/objects/Beneficiaries__c/fields/PlannedWomen__c.field-meta.xml
<CustomField>
    <fullName>PlannedWomen__c</fullName>
    <label>Planned-Women</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>