force-app/main/default/objects/Beneficiaries__c/fields/Sum_of_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Beneficiaries__c</fullName>
    <formula>PlannedBoys__c  +  PlannedGirls__c  +  PlannedHouseholds__c  +  PlannedIndividuals__c  +  PlannedMen__c  +  PlannedWomen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Beneficiaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>