force-app/main/default/objects/Beneficiaries__c/recordTypes/Actual_Beneficiaries.recordType-meta.xml
<RecordType>
    <fullName>Actual_Beneficiaries</fullName>
    <active>true</active>
    <label>Actual Beneficiaries</label>
</RecordType>