force-app/main/default/objects/Beneficiaries__c/recordTypes/Planned_Beneficiaries.recordType-meta.xml
<RecordType>
    <fullName>Planned_Beneficiaries</fullName>
    <active>true</active>
    <label>Planned Beneficiaries</label>
</RecordType>